tests/experimental/success/test_const_array_width.lus
node f(const n: int; x : bool) returns (b1 : bool^n);
let
  --%PROPERTY n <= 1 or b1[1] = false;     
  b1 = false ^ n;
tel
