tests/experimental/error/machine_integer_01.lus

node top(x: int) returns (y:int);
let
   y = !x;
tel